tests/baselines/reference/deleteOperatorInvalidOperations.errors.txt
==== tests/cases/compiler/deleteOperatorInvalidOperations.ts (3 errors) ====
    // Unary operator delete
    var ANY;
    
    // operand before delete operator
    var BOOLEAN1 = ANY delete ;     //expect error
                       ~~~~~~
!!! error TS1005: ',' expected.
                              ~
!!! error TS1003: Identifier expected.
    
    // miss an operand
    var BOOLEAN2 = delete ;
                          ~
!!! error TS1003: Identifier expected.
    
    // delete global variable s
    class testADelx {
        constructor(public s: () => {}) {
            delete s;      //expect error
        }
    }